--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <p class="text-lg mb-4 text-white" data-lang-en="Meeting is fate, a gift is our bond.">Meeting is fate, a gift is our bond.</p>
                 <div class="bg-white p-2 rounded-lg inline-block my-4 shadow-lg">
                      <!-- UPDATED: New QR Code -->
-                     <img src="https://storage2.me-qr.com/qr/231091574.png" alt="1602 Lucky Draw QR Code" class="w-48 h-48">
+                     <img src="https://storage2.me-qr.com/qr/231358832.png" alt="1602 Lucky Draw QR Code" class="w-48 h-48">
                 </div>
                 <p class="mt-4 text-sm text-gray-300" data-lang-en="Scan or Click Below to Join!">Scan or Click Below to Join!</p>
                 <button id="fast-track-btn" class="mt-6 w-full bg-gradient-to-r from-yellow-400 to-amber-500 text-black font-bold py-3 px-4 rounded-lg shadow-lg transition-transform transform hover:scale-105" data-lang-en="Enter Now">Enter Now</button>
@@ -365,7 +365,6 @@
                 "Pale Ale (Fruity & Light)": "清爽果香 (Pale Ale)",
                 "Extra Dark (Rich & Malty)": "浓郁麦香 (Extra Dark)",
                 "Lager (Classic & Crisp)": "经典原味 (Lager)",
-                "Our AI Sommelier is pouring a recommendation...": "AI品鉴师正在为您倒酒...",
                 "Event Announcement": "活动公告",
                 "Wine Card": "酒卡",
                 "Cash Voucher RM5": "RM5 现金券",
@@ -882,5 +881,7 @@
         initApp();
     </script>
 </body>
+</html>
+
 </html>
 
