Fix registration null pointer errors and enhance DOM element safety checks

--- a/admin.html
+++ b/admin.html
@@ -226,7 +226,7 @@
             summaryLoading.classList.remove('hidden');
             summaryContent.classList.add('hidden');
 
-            const apiKey = ""; 
+            const apiKey = "AIzaSyDEpz7tsqqZ6-9YBXUovTczOfrm5ny7rbk"; 
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
             
             const payload = {
